Make Krita show rulers in Pixel unit (now activated by default)

You can always switch to other units by right-clicking on the ruler

BUG:331610