libs/main/KoView_p.h
@@ -33,16 +33,17 @@ class UnitActionGroup : public QActionGroup
 {
     Q_OBJECT
 public:
-    explicit UnitActionGroup(KoDocument *document, QObject* parent = 0)
+    explicit UnitActionGroup(KoDocument *document, bool addPixelUnit, QObject* parent = 0)
             : QActionGroup(parent)
             , m_document(document)
+            , m_listOptions(addPixelUnit ? KoUnit::ListAll : KoUnit::HidePixel)
     {
         setExclusive(true);
         connect(this, SIGNAL(triggered(QAction*)), SLOT(onTriggered(QAction*)));
         connect(document, SIGNAL(unitChanged(KoUnit)), SLOT(onUnitChanged(KoUnit)));
 
-        const QStringList unitNames = KoUnit::listOfUnitNameForUi(KoUnit::HidePixel);
-        const int currentUnitIndex = m_document->unit().indexInListForUi(KoUnit::HidePixel);
+        const QStringList unitNames = KoUnit::listOfUnitNameForUi(m_listOptions);
+        const int currentUnitIndex = m_document->unit().indexInListForUi(m_listOptions);
 
         for (int i = 0; i < unitNames.count(); ++i) {
             QAction* action = new QAction(unitNames.at(i), this);
@@ -58,12 +59,12 @@ public:
 private slots:
     void onTriggered(QAction *action)
     {
-        m_document->setUnit(KoUnit::fromListForUi(action->data().toInt(), KoUnit::HidePixel));
+        m_document->setUnit(KoUnit::fromListForUi(action->data().toInt(), m_listOptions));
     }
 
     void onUnitChanged(const KoUnit &unit)
     {
-        const int indexInList = unit.indexInListForUi(KoUnit::HidePixel);
+        const int indexInList = unit.indexInListForUi(m_listOptions);
 
         foreach (QAction *action, actions()) {
             if (action->data().toInt() == indexInList) {
@@ -81,6 +82,7 @@ private slots:
 
 private:
     KoDocument *m_document;
+    KoUnit::ListOptions m_listOptions;
 };
 
 #endif
